# raybit

./: .gitignore  Cargo.toml  LICENSE  README.md  bf_tools.py
example/: basic_window.bf  basic_window_minified.bf
src/: analysis.rs  clean.rs  error.rs  flags.rs  flip.rs  interpret.rs  lexer.rs  main.rs  memory.rs  read.rs
src/bindings/: map.rs  mod.rs  raudio.rs  rcore.rs  rmodels.rs  rshapes.rs  rtext.rs  rtextures.rs
test/: TheBrainfuckedLoneWolf.b  atoi.b  bfcl.bf  bitwidth.bf  boundsleft.b  boundsright.b  collatz.b  crtest.b  eoftest.b  extensions.b  facto.b  gameoflife.b  hello.b  hello_world.b  lexical_test.bf  numwarp.b  obscure-problems.b  primes.bf  quine.b  sierpinski.b  unmatched.b
